--- a/main.html
+++ b/main.html
@@ -9,8 +9,18 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		
 </script>
-
+	<ol type="1">
+		<li>Iphone</li>
+		<li>Clothes</li>
+		<li>Watch</li>
+	</ol>
+ <ul>
+	 <li>Kerala</li>
+	 <li>Chennai</li>
+	 <li>Kedarnath</li>
+ </ul>
 </body>
 
 </html>
