--- a/main.html
+++ b/main.html
@@ -11,15 +11,15 @@
     <script type="text/javascript" src="./script.js">
 		
 </script>
-	<ol type="1">
-		<li>Iphone</li>
-		<li>Clothes</li>
-		<li>Watch</li>
+	<ol data-ns-test="shoppingList">
+		<li data-ns-test="shoppingList">Iphone</li>
+		<li data-ns-test="shoppingList">Clothes</li>
+		<li data-ns-test="shoppingList">Watch</li>
 	</ol>
- <ul>
-	 <li>Kerala</li>
-	 <li>Chennai</li>
-	 <li>Kedarnath</li>
+ <ul data-ns-test="holidayList">
+	 <li data-ns-test="holidayList">Kerala</li>
+	 <li data-ns-test="holidayList">Chennai</li>
+	 <li data-ns-test="holidayList">Kedarnath</li>
  </ul>
 </body>
 
